# ClockPlus

./: CMakeLists.txt  README.md
src/: Application.cpp  Application.h  BackgroundManager.cpp  BackgroundManager.h  ClockContainer.cpp  ClockContainer.h  Common.cpp  Common.h  DateTimeProvider.cpp  DateTimeProvider.h  MainWindow.cpp  MainWindow.h  OutlinedLabel.cpp  OutlinedLabel.h  main.cpp
src/Background/: Background.cpp  Background.h  Backgrounds.cpp  Backgrounds.h  Color.cpp  Color.h  CssGenerator.cpp  CssGenerator.h  Date.cpp  Date.h  Filter.cpp  Filter.h  JsonLoader.cpp  JsonLoader.h  Palette.cpp  Palette.h  PaletteEntry.cpp  PaletteEntry.h  Period.cpp  Period.h
